--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tracium",
+  "name": "@sitespeed.io/tracium",
   "version": "0.2.0",
-  "description": "Chromium trace parser",
+  "description": "Chromium trace parser not throwing errors",
   "main": "index.js",
   "repository": "github:aslushnikov/tracium",
   "engines": {
